templates/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: app-wordpress
spec:
  #type:        # O headless service não possui type definido
  selector:
    app: mysql
  ports:
  - port: 3306
    protocol: TCP
