templates/genreal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: app-wordpress

  annotations:                                        
    kubernetes.io/ingress.class: "nginx"              
    cert-manager.io/cluster-issuer: "lets-encrypt"    
    ingress.kubernetes.io/force-ssl-redirect: "true"  

spec:
  rules:
  - host: "wp.anselme.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port: 
              number: 80
  tls:
  - hosts:
    - "wp.anselme.com.br"  
    secretName: "lets-encrypt-certificate"
